// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarksList date bookmarked 1`] = `
<div
  className="results"
>
  <div
    className="results__row"
  >
    <BookmarksSortBy
      onChange={[MockFunction]}
      selectedOption="DateBookmarked"
    />
  </div>
  <div
    className="results__inner-container"
  >
    <div>
      BookmarksResultList: 
      5
       hits
    </div>
  </div>
</div>
`;

exports[`BookmarksList date happened - one marked for removal 1`] = `
<div
  className="results"
>
  <div
    className="results__row"
  >
    <BookmarksSortBy
      onChange={[MockFunction]}
      selectedOption="DateHappened"
    />
    <button
      className="bookmarks__remove"
      onClick={[MockFunction]}
    >
      Confirm Removal
    </button>
  </div>
  <div
    className="results__inner-container"
  >
    <div>
      BookmarksResultList: 
      4
       hits
    </div>
  </div>
</div>
`;

exports[`BookmarksList date happened 1`] = `
<div
  className="results"
>
  <div
    className="results__row"
  >
    <BookmarksSortBy
      onChange={[MockFunction]}
      selectedOption="DateHappened"
    />
  </div>
  <div
    className="results__inner-container"
  >
    <div>
      BookmarksResultList: 
      4
       hits
    </div>
  </div>
</div>
`;

exports[`BookmarksList no results 1`] = `
<div
  className="results"
>
  <div
    className="results__row"
  >
    0
  </div>
  <div
    className="results__inner-container"
  >
    <div>
      BookmarksResultList: 
      0
       hits
    </div>
  </div>
</div>
`;
